# flir-ats-tools

./: .gitignore  LICENSE  README.md  Raphael_Work.py  min_and_max.py  print_metadata.py  pyproject.toml  setup.cfg
FLIR examples/: min_and_max.py
ats_temperature_basic/: ats_reader.py  batch_import_ats_superframe_processing_visualization.ipynb  example_read_ats.py  object_parameters.json  temperature_exploration.py
flir_ats_tools/: __init__.py  cli.py
flir_ats_tools/analysis/: __init__.py
flir_ats_tools/utilities/: __init__.py  ats_reader.py  object_parameters.json
notebooks/: batch_import_ats_superframe_processing_visualization.ipynb  batch_import_ats_superframe_processing_visualization_v2.ipynb
