[metadata]
name = flir-ats-tools
version = 0.1.0
description = Python utilities for FLIR ATS thermal video files
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = IC Labs
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering

[options]
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    numpy

[options.package_data]
flir_ats_tools.utilities =
    object_parameters.json

[options.entry_points]
console_scripts =
    flir-ats-read = flir_ats_tools.cli:main
